[CODE] Correctly fix invitation z-index

--- a/Client/Window/angular/projects/main/src/app/app.component.scss
+++ b/Client/Window/angular/projects/main/src/app/app.component.scss
@@ -6,6 +6,7 @@ app-invitation {
     height: auto;
     min-height: 5%;
     transform: translateY(-50%);
+    z-index: 1000;
 }
 
 app-teamorders {
