--- a/Client/Window/angular/projects/main/src/app/components/utils/invitation/invitation.component.scss
+++ b/Client/Window/angular/projects/main/src/app/components/utils/invitation/invitation.component.scss
@@ -1,7 +1,6 @@
 #container {
     width: 100%;
     height: auto;
-    z-index: 1000;
 
     #messages-container {
         width: 100%;
